force-app/main/default/objects/BiView__c/BiView__c.object-meta.xml
<CustomObject>
    <label>BI View</label>
    <nameField>
        <label>View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BI Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>