force-app/main/default/objects/BiView__c/fields/BiWorkbook__c.field-meta.xml
<CustomField>
    <fullName>BiWorkbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BiWorkbook</label>
    <referenceTo>BiWorkbook__c</referenceTo>
    <relationshipName>BiView</relationshipName>
    <type>Lookup</type>
</CustomField>