force-app/main/default/objects/BiView__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <inlineHelpText>Thumbnail of the view</inlineHelpText>
    <label>Thumbnail</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>