force-app/main/default/objects/BiView__c/fields/View_Id__c.field-meta.xml
<CustomField>
    <fullName>View_Id__c</fullName>
    <externalId>true</externalId>
    <label>View_Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>